syntax = "proto3";

package sbot.proto.model;

option csharp_namespace = "SBot.Proto.Model";
option go_package = "github.com/sbot/proto/model";
option java_multiple_files = true;
option java_outer_classname = "AttackPaload";
option java_package = "com.gbw3bao.sbot.proto.model";
option php_namespace = "SBot\\Proto\\Model";

message MakeJarAttackPayloadRequest {

  string taskId = 1;
  string nodeId = 2;

  string cmd =3;

}

message MakeJarAttackPayloadReply {

  int32 status =1;

  uint64 length =2;

  bytes  content = 3;

}