syntax = "proto3";

package sbot.proto.service;

import "proto/model/attack_payload.proto";

option csharp_namespace = "SBot.Proto.Service";
option go_package = "github.com/sbot/proto/service";
option java_multiple_files = true;
option java_outer_classname = "AttackPayloadService";
option java_package = "com.gbw3bao.sbot.proto.service";
option php_namespace = "SBot\\Proto\\Service";


service AttackPayloadService {

  //generate a java jar attack payload
  rpc MakeJar(model.MakeJarAttackPayloadRequest) returns (model.MakeJarAttackPayloadReply) {}

}


